kubernetes/order/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: dicoding
  labels:
    app: e-commerce
    tier: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commerce
      tier: services
  template:
    metadata:
      labels:
        app: e-commerce
        tier: services
    spec:
      containers:
        - name: order
          image: ghcr.io/pyroblazer/order-service:latest
          ports:
            - containerPort: 3000
