kubernetes/order/order-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order  # Unique name for this Istio VirtualService
  namespace: dicoding  # Namespace for organizational purposes
spec:
  hosts:
    - "*"  # Hostname wildcard to match any host
  gateways:
    - order-gateway  # Gateway that this VirtualService is associated with
  http:
    - match:
        - uri:
            exact: "/order"  # Exact URI match for "/order"
      route:
        - destination:
            host: order  # Destination service hostname
            port:
              number: 3000  # Destination service port number
